add content + url

--- a/src/about.ejs
+++ b/src/about.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +18,7 @@
 
 			<h2 class="about__title">Skills</h2>
 
-			<p class="about__text">HTML / CSS 3 - Bootstrap - Responsive design  - JQuery - Javascript (ES6) - React - Gulp - Wordpress - MySQL / Php - Drupal - Adobe Photoshop - Webpack - Gulp …</p>
+			<p class="about__text">HTML / CSS 3 - Bootstrap - Responsive design  - JQuery - Javascript (ES6) - React - Wordpress - MySQL / Php - Drupal - Adobe Photoshop - Webpack - Gulp …</p>
 
 			<p class="about__button"><a href="#" class="form__button">Full CV</a><img src="assets/images/dowload.svg" alt="download-arrow" class="download-arrow"></p>
 
