--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -239,11 +239,15 @@ header {
 	background-size: contain;
 }
 .project__item--project2{
-	background: url("/assets/images/AU REGAL/1000x650_REGALbis.png") no-repeat center;
+	background: url("/assets/images/AU REGAL/1000x650_REGAL.png") no-repeat center;
 	background-size: contain;
 }
 .project__item--project3{
 	background: url("/assets/images/PENDU/1000x650_PENDU.png") no-repeat center;
+	background-size: contain;
+}
+.project__item--project4{
+	background: url("/assets/images/TODO/1000x650_TODO.jpg") no-repeat center;
 	background-size: contain;
 }
 .js-fadeIn__item{
