--- a/src/header.ejs
+++ b/src/header.ejs
@@ -23,12 +23,12 @@
 	<footer class="footer--menu">
 		<div class="footer">
 			<div class="footer__inner--left">
-				<p class="footer__social"><a class="footer__link" href="">yoan.hillion@hotmail.fr</a></p>
+				<p class="footer__social"><a class="footer__link" href="mailto:yoan.hillion@hotmail.fr">yoan.hillion@hotmail.fr</a></p>
 			</div>
 			<div class="footer__inner--right">
-				<p class="footer__social"><a class="footer__link" href="">Linkedin</a></p>
-				<p class="footer__social"><a class="footer__link" href="">Twitter</a></p>
-				<p class="footer__social"><a class="footer__link" href="">Github</a></p>
+				<p class="footer__social"><a class="footer__link" href="https://www.linkedin.com/in/yoan-hillion-b94322a4">Linkedin</a></p>
+				<p class="footer__social"><a class="footer__link" href="https://twitter.com/Y0anH">Twitter</a></p>
+				<p class="footer__social"><a class="footer__link" href="https://github.com/yoan972">Github</a></p>
 			</div>
 		</div>	
 	</footer>
