--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,12 +30,12 @@
 				<footer class="footer--menu">
 					<div class="footer">
 						<div class="footer__inner--left">
-							<p class="footer__social"><a class="footer__link" href="">yoan.hillion@hotmail.fr</a></p>
+							<p class="footer__social"><a class="footer__link" href="mailto:yoan.hillion@hotmail.fr">yoan.hillion@hotmail.fr</a></p>
 						</div>
 						<div class="footer__inner--right">
-							<p class="footer__social"><a class="footer__link" href="">Linkedin</a></p>
-							<p class="footer__social"><a class="footer__link" href="">Twitter</a></p>
-							<p class="footer__social"><a class="footer__link" href="">Github</a></p>
+							<p class="footer__social"><a class="footer__link" href="https://www.linkedin.com/in/yoan-hillion-b94322a4">Linkedin</a></p>
+							<p class="footer__social"><a class="footer__link" href="https://twitter.com/Y0anH">Twitter</a></p>
+							<p class="footer__social"><a class="footer__link" href="https://github.com/yoan972">Github</a></p>
 						</div>
 					</div>	
 				</footer>
@@ -61,25 +61,23 @@
 				  	 		<h2 class="project__title">Pendu</h2>
 				  	 	</div>
 			  	 	</a>
-			  	 	<% for(let i = 0; i < 3; i++ ) { %>
-			  	 	<a class="project__item js-fadeIn__item" href="/project.html">
+			  	 	<a class="project__item project__item--project4 js-fadeIn__item" href="/todo.html">
 			  	 		<div class="overlay">
-				  	 		<h2 class="project__title">project title</h2>
+				  	 		<h2 class="project__title">To Do App</h2>
 				  	 	</div>
 			  	 	</a>
-			  	 	<% } %>
 			  	 </section>
 	  	 	</div>
 		</main>
 		<footer>
 			<div class="footer">
 				<div class="footer__inner--left">
-					<p class="footer__social"><a class="footer__link" href="">yoan.hillion@hotmail.fr</a></p>
+					<p class="footer__social"><a class="footer__link" href="mailto:yoan.hillion@hotmail.fr">yoan.hillion@hotmail.fr</a></p>
 				</div>
 				<div class="footer__inner--right">
-					<p class="footer__social"><a class="footer__link" href="">Linkedin</a></p>
-					<p class="footer__social"><a class="footer__link" href="">Twitter</a></p>
-					<p class="footer__social"><a class="footer__link" href="">Github</a></p>
+					<p class="footer__social"><a class="footer__link" href="https://www.linkedin.com/in/yoan-hillion-b94322a4">Linkedin</a></p>
+					<p class="footer__social"><a class="footer__link" href="https://twitter.com/Y0anH">Twitter</a></p>
+					<p class="footer__social"><a class="footer__link" href="https://github.com/yoan972">Github</a></p>
 				</div>
 			</div>	
 		</footer>
