--- a/src/project.ejs
+++ b/src/project.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,8 +15,7 @@
 			<div class="homeproject__item">
 				<div class="homeproject__description">
 					<h2 class="homeproject__title2">Keep your To Do List and don’t forget your task !</h2>
-					<p class="homeproject__text">I’m Yoan, a french Front-end developper based in Paris and from
-					Martinique. I just like building interface and interactive experiences. I also had the chance to collobarate with differents companies such as Leoni , Rueducommerce.fr , Publicis Group as Chemistry agency,Leo Burnett. I'm code lover so let's get in touch ! :)</p>
+					<p class="homeproject__text">This website aim to present a burger foodtruck. Made with HTML5/CSS3 and vanilla Javascript.</p>
 				</div>
 			</div>
 			<div class="homeproject__item js-fadeIn__item">
@@ -32,10 +31,6 @@
 				<div class="homeproject__description">
 					<h2 class="homeproject__title2">Keep your To Do List and don’t forget your task !</h2>
 				</div>
-			</div>
-			
-			<div class="homeproject__landscape js-fadeIn__item">
-				<img class="homeproject__image" src="assets/images/BURGER/1000x650_BURGER.jpg">
 			</div>
 		</section>
 		<div class="homeproject__navigation">
