--- a/src/project2.ejs
+++ b/src/project2.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,18 +15,17 @@
 			<div class="homeproject__item">
 				<div class="homeproject__description">
 					<h2 class="homeproject__title2">Keep your To Do List and don’t forget your task !</h2>
-					<p class="homeproject__text">I’m Yoan, a french Front-end developper based in Paris and from
-					Martinique. I just like building interface and interactive experiences. I also had the chance to collobarate with differents companies such as Leoni , Rueducommerce.fr , Publicis Group as Chemistry agency,Leo Burnett. I'm code lover so let's get in touch ! :)</p>
+					<p class="homeproject__text">This is a commercial website which aim to present a bakery based in Martinique. The website has been build with Bootstrap 4.</p>
 				</div>
 			</div>
 			<div class="homeproject__item js-fadeIn__item">
 				<img class="homeproject__image" src="assets/images/AU REGAL/720px2_REGAL.png">
 			</div>
 			<div class="homeproject__landscape js-fadeIn__item">
-				<img class="homeproject__image" src="assets/images/AU REGAL/1440x480_REGAL.png">
+				<img class="homeproject__image" src="assets/images/AU REGAL/1440x480_REGAL.jpg">
 			</div>
 			<div class="homeproject__item js-fadeIn__item">
-				<img class="homeproject__image" src="assets/images/AU REGAL/720px1_REGAL.png">
+				<img class="homeproject__image" src="assets/images/AU REGAL/720px2_REGAL.jpg">
 			</div>
 			<div class="homeproject__item js-fadeIn__item">
 				<div class="homeproject__description">
