--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -436,6 +436,7 @@ footer{
 }
 .homeproject__text{
 	font-size: 24px;
+	line-height: 1.5;
 }
 .homeproject__image{
 	width: 100%;
@@ -482,6 +483,7 @@ footer{
 	}
 	.homeproject__text, .about__text, .contact-text{
 		font-size: 20px;
+		line-height: 1.5;
 	}
 	.navigation__button{
 		width: 100%;
@@ -527,6 +529,7 @@ footer{
 	}
 	.homeproject__text, .about__text, .contact-text{
 		font-size: 24px;
+		line-height: 1.5;
 	}
 	.navigation__button{
 		width: 50%;
