--- a/src/project2.ejs
+++ b/src/project2.ejs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Yoan Hillion | Au Regal</title>
+	<link rel="icon" type="image/png" href="assets/images/favicon64px-black.png" />
 </head>
 <body>
 	<main class="main">
@@ -14,7 +15,7 @@
 		<section class="homeproject__content">
 			<div class="homeproject__item">
 				<div class="homeproject__description">
-					<h2 class="homeproject__title2">Keep your To Do List and don’t forget your task !</h2>
+					<h2 class="homeproject__title2">Bake the world a better place !</h2>
 					<p class="homeproject__text">This is a commercial website which aim to present a bakery based in Martinique. The website has been build with Bootstrap 4.</p>
 				</div>
 			</div>
@@ -29,7 +30,7 @@
 			</div>
 			<div class="homeproject__item js-fadeIn__item">
 				<div class="homeproject__description">
-					<h2 class="homeproject__title2">Keep your To Do List and don’t forget your task !</h2>
+					<h2 class="homeproject__title2">Eat more cake and Taste fresh pastries</h2>
 				</div>
 			</div>
 		</section>
