--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,7 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	    <title>Yoan Hillion</title>
+	    <link rel="icon" type="image/png" href="assets/images/favicon64px-black.png" />
 	</head>
 	<body>
 		<main class="main">
