--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,12 @@
 @font-face {
     font-family: Museo;
+     font-display: auto;
     src: url(/assets/fonts/Museo700-Regular.ttf);
    	font-weight: bold;
 }
 @font-face {
     font-family: Museo;
+     font-display: auto;
     src: url(/assets/fonts/Museo300-Regular.ttf);
 }
 *{
