--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<%= require('./gtag.ejs')() %>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	    <title>Yoan Hillion</title>
 	    <link rel="icon" type="image/png" href="assets/images/favicon64px-black.png" />
+	    <meta name="Description" content="Yoan Hillion, Front-end developper.">
 	</head>
 	<body>
 		<main class="main">
