--- a/src/contact.ejs
+++ b/src/contact.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<%= require('./gtag.ejs')() %>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Yoan Hillion | Contact</title>
